meegotouchhome (0.22.4~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 20 Oct 2010 13:34:13 +0300

meegotouchhome (0.22.3-1) unstable; urgency=low

  * Don't rotate the screen while switcher mode change is in progress

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 20 Oct 2010 13:33:44 +0300

meegotouchhome (0.22.2-1) unstable; urgency=low

  * Fixes: NB#197319 - Duihome hogs CPU after vigorous installing

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 18 Oct 2010 09:34:26 +0300

meegotouchhome (0.22.1-1) unstable; urgency=low

  * Fixes: NB#194052 - Object names used to change style for progress indicators
  * Fixes: NB#194106 - Launcher progress indicator spinner keeps spinning even after the application has started
  * Fixes: NB#186716 - Homescreen updates the display when touched even if nothing happens

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 07 Oct 2010 15:07:03 +0300

meegotouchhome (0.22.0-1) unstable; urgency=low

  * Implemented: SWP#DUI-3338 Rename duihome to follow MeeGo component naming convention.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 27 Sep 2010 18:26:01 +0300

duihome (0.21.22-1) unstable; urgency=low

  * Fixes: NB#190663 - aspect ratio of the clock is not maintained when minimised

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Sep 2010 18:54:04 +0300

duihome (0.21.21-1) unstable; urgency=low

  * Fixes: NB#187573 - duihome eating CPU at the background when panning foreground application
  * Fixes: NB#189334 - Launcher startup indicator updated too often

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 16 Sep 2010 17:06:00 +0300

duihome (0.21.20-1) unstable; urgency=low

  * The stubs are now included with the -dev package

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Sep 2010 15:34:48 +0300

duihome (0.21.19-1) unstable; urgency=low

  * Implemented: SWP#DUI-2406 Progress of installation and update of applications indicated in launcher