@@ -1,6 +1,7 @@
 meegotouchhome (0.22.4~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#190081 - call and search applications open on using hkb keys(* and ')') quickly in home screen
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 20 Oct 2010 13:34:13 +0300
 
